--- a/CSS/index.css
+++ b/CSS/index.css
@@ -4,7 +4,6 @@ body{
   height: 100%;
 }
 
-
 .Main{
   width: 100%;
   height: 100%;
@@ -12,25 +11,68 @@ body{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: black;
-    
+  background-color: black;   
 }
 
 .myName{
  width: 500px;
  height: auto;
- display: flex;
+ text-align: center;
  justify-content: center;
- padding-bottom: 20px;
+ padding-bottom: 10px;
  color: white;
  border-bottom: 2px white solid;
-   
+ font-size: 60px;
+ font-weight: 700;
+ letter-spacing: 2px;
+ margin-bottom: 10px;
+ background: black;
+ position: relative;
+ animation: text1 2s 1 ease-in-out;
+ z-index: 1;
+ overflow: hidden;
+ white-space: nowrap;
 }
 
 .myTitle{
- width: fit-content;
- height: auto;
- padding: 20px 0;
- color: white;
+ width: 500px;
+ height: fit-content;
+ text-align: center;
+ padding-bottom: 20px;
+ color: rgb(119, 33, 33);
+ font-size: 30px;
+ font-weight: 500;
+ letter-spacing: 5px;
+ animation: text2 2.7s 1 ease-in;
+ background: black;
+ margin-bottom: 0;
+ position: relative;
+ z-index: 0;
+ opacity: 100%;
+ overflow: hidden;
+ white-space: nowrap;
 }
 
+@keyframes text1{
+  0%{
+    width: 0;
+    margin-bottom: -40px;
+    color: black;
+    opacity: 0;
+    }
+  60%{
+      color: black;
+    }
+}
+
+@keyframes text2{
+  0%{
+    opacity: 0;   
+  }
+  40%{
+    opacity: 0;
+  }
+  80%{
+    opacity: 1;
+  }
+}
